# RGB2YUV-GPU

./: .gitignore  CMakeLists.txt  README.md
cuda/: CMakeLists.txt  rgb2yuv.cu
src/: main.cpp
